--- a/Sparkle/Sparkle.framework/Versions/B/Resources/Info.plist
+++ b/Sparkle/Sparkle.framework/Versions/B/Resources/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>21G83</string>
+	<string>24C101</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.2.2</string>
+	<string>2.7.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleSupportedPlatforms</key>
@@ -25,24 +25,24 @@
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>2017.1</string>
+	<string>2044</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>13E500a</string>
+	<string>24B75</string>
 	<key>DTPlatformName</key>
 	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>12.3</string>
+	<string>15.1</string>
 	<key>DTSDKBuild</key>
-	<string>21E226</string>
+	<string>24B75</string>
 	<key>DTSDKName</key>
-	<string>macosx12.3</string>
+	<string>macosx15.1</string>
 	<key>DTXcode</key>
-	<string>1331</string>
+	<string>1610</string>
 	<key>DTXcodeBuild</key>
-	<string>13E500a</string>
+	<string>16B40</string>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.11</string>
+	<string>10.13</string>
 </dict>
 </plist>
