--- a/Application/Resources/Platypus-Info.plist
+++ b/Application/Resources/Platypus-Info.plist
@@ -429,7 +429,7 @@
 	<key>CFBundleExecutable</key>
 	<string>Platypus</string>
 	<key>CFBundleGetInfoString</key>
-	<string>© 2003-2025 Sveinbjorn Thordarson.</string>
+	<string>© 2003-2025 Sveinbjorn Thordarson. BSD License.</string>
 	<key>CFBundleIconFile</key>
 	<string>PlatypusAppIcon</string>
 	<key>CFBundleIdentifier</key>
@@ -445,13 +445,13 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1291</string>
+	<string>1292</string>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.developer-tools</string>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.13</string>
+	<string>11.5</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>© 2003-2025 Sveinbjorn Thordarson.</string>
+	<string>© 2003-2025 Sveinbjorn Thordarson. BSD License.</string>
 	<key>NSMainNibFile</key>
 	<string>Platypus</string>
 	<key>NSPrincipalClass</key>
